[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/Helpers/Camera/CustomDelimiter2D.gd" type="Script" id=1]
[ext_resource path="res://assets/Levels/Basement.png" type="Texture" id=2]
[ext_resource path="res://src/Actors/LirikYaki.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Actors/SlimeFR.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Demos/PlaytestDemo.gd" type="Script" id=5]
[ext_resource path="res://assets/GUI/profile.png" type="Texture" id=6]
[ext_resource path="res://assets/GUI/cash.png" type="Texture" id=7]
[ext_resource path="res://src/Helpers/GUI/HealthBar.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Helpers/GUI/PauseMenu.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Helpers/GUI/SettingsMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/Helpers/Audio/MusicManager.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 644.725, 4.32855 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 47.2882 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 507.743, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 56.6757 )

[node name="Sandbox" type="Node2D"]
pause_mode = 2
script = ExtResource( 5 )

[node name="LevelBackground" type="Sprite" parent="."]
position = Vector2( 511.594, 251.193 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -509.742, -251.754 )

[node name="Boundaries" type="Node" parent="LevelBackground"]

[node name="BasementLevel" type="StaticBody2D" parent="LevelBackground/Boundaries"]

[node name="bottom" type="CollisionShape2D" parent="LevelBackground/Boundaries/BasementLevel"]
position = Vector2( 647.457, 295.179 )
shape = SubResource( 1 )

[node name="left" type="CollisionShape2D" parent="LevelBackground/Boundaries/BasementLevel"]
position = Vector2( 181.696, 244.935 )
shape = SubResource( 2 )

[node name="top" type="CollisionShape2D" parent="LevelBackground/Boundaries/BasementLevel"]
position = Vector2( 679.186, 193.113 )
shape = SubResource( 3 )

[node name="right" type="CollisionShape2D" parent="LevelBackground/Boundaries/BasementLevel"]
position = Vector2( 1177.09, 239.51 )
shape = SubResource( 4 )

[node name="CameraPositions" type="Node" parent="LevelBackground"]

[node name="Basement_Delimiter" type="Node2D" parent="LevelBackground/CameraPositions"]
script = ExtResource( 1 )

[node name="TopLeft" type="Position2D" parent="LevelBackground/CameraPositions/Basement_Delimiter"]
position = Vector2( 27.4059, 13.2936 )

[node name="BottomRight" type="Position2D" parent="LevelBackground/CameraPositions/Basement_Delimiter"]
position = Vector2( 1280.42, 295.973 )

[node name="objects" type="YSort" parent="."]
pause_mode = 1

[node name="actors" type="YSort" parent="objects"]

[node name="LirikYaki" parent="objects/actors" groups=[
"Player",
] instance=ExtResource( 3 )]
position = Vector2( 264.692, 274.695 )

[node name="Enemy" parent="objects/actors" instance=ExtResource( 4 )]
position = Vector2( 488.322, 278.493 )
scale = Vector2( 0.5, 0.5 )

[node name="Enemy2" parent="objects/actors" instance=ExtResource( 4 )]
position = Vector2( 622.456, 238.084 )
scale = Vector2( 0.5, 0.5 )

[node name="Enemy3" parent="objects/actors" instance=ExtResource( 4 )]
position = Vector2( 829.55, 281.299 )
scale = Vector2( 0.5, 0.5 )

[node name="Enemy4" parent="objects/actors" instance=ExtResource( 4 )]
position = Vector2( 954.144, 230.227 )
scale = Vector2( 0.5, 0.5 )

[node name="Enemy5" parent="objects/actors" instance=ExtResource( 4 )]
position = Vector2( 1119.71, 274.003 )
scale = Vector2( 0.5, 0.5 )

[node name="MusicManager" parent="." instance=ExtResource( 11 )]

[node name="GUI" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="GUI" instance=ExtResource( 9 )]
visible = false

[node name="SettingsMenu" parent="GUI" instance=ExtResource( 10 )]
visible = false

[node name="GameUI" type="Control" parent="GUI"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Profile" type="TextureRect" parent="GUI/GameUI"]
margin_left = 15.0
margin_top = 16.0
margin_right = 90.0
margin_bottom = 91.0
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cash" type="TextureRect" parent="GUI/GameUI"]
margin_left = 97.4237
margin_top = 49.9046
margin_right = 239.424
margin_bottom = 75.9046
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="healthBar" parent="GUI/GameUI" instance=ExtResource( 8 )]
margin_left = 103.0
margin_top = 32.0
margin_right = 306.0
margin_bottom = 53.0
mouse_filter = 2

[connection signal="enemy_hit" from="objects/actors/Enemy" to="objects/actors/LirikYaki" method="_on_enemy_hit"]
[connection signal="enemy_hit" from="objects/actors/Enemy2" to="objects/actors/LirikYaki" method="_on_enemy_hit"]
[connection signal="enemy_hit" from="objects/actors/Enemy3" to="objects/actors/LirikYaki" method="_on_enemy_hit"]
[connection signal="enemy_hit" from="objects/actors/Enemy4" to="objects/actors/LirikYaki" method="_on_enemy_hit"]
[connection signal="enemy_hit" from="objects/actors/Enemy5" to="objects/actors/LirikYaki" method="_on_enemy_hit"]
[connection signal="menu_hidden" from="GUI/PauseMenu" to="." method="_on_pause_menu_hidden"]
[connection signal="show_settings" from="GUI/PauseMenu" to="." method="show_settings"]
[connection signal="show_settings" from="GUI/PauseMenu" to="GUI/SettingsMenu" method="show_settings"]
[connection signal="start_rat_level" from="GUI/PauseMenu" to="." method="loadRatDemo"]
[connection signal="start_slime_level" from="GUI/PauseMenu" to="." method="loadSlimeDemo"]
[connection signal="settings_changed" from="GUI/SettingsMenu" to="." method="_on_SettingsMenu_settings_changed"]
